@@ -1,9 +1,11 @@
 package com.example.demo.controller;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -12,15 +14,20 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import com.example.demo.entity.Diary;
+import com.example.demo.entity.Post;
+import com.example.demo.entity.Tag;
 import com.example.demo.repository.CommentsRepository;
 import com.example.demo.repository.DiariesRepository;
+import com.example.demo.repository.PostsRepository;
 import com.example.demo.repository.ReactionsRepository;
 import com.example.demo.repository.TagsRepository;
 import com.example.demo.repository.UsersRepository;
 
+import jakarta.servlet.http.HttpSession;
 
 @RestController
-@RequestMapping("/search")
+@RequestMapping("/api")
+
 public class SearchController {
 	
 	@Autowired
@@ -37,6 +44,9 @@ public class SearchController {
 	
     @Autowired
     private DiariesRepository diaryRepository;
+    
+    @Autowired
+    private PostsRepository postsrepository;
 	
 	//もし、null、空白、空文字であれば全件表示。そうでなければtagに入った文字を取得
 //		@PostMapping("/tag/{tag}")
@@ -51,22 +61,7 @@ public class SearchController {
 //			model.addAttribute("searchedTag", tag);
 //			return "/search";
 //		}
-//	@GetMapping("/search")
-//	@ResponseBody
-//	public List<Diary> searchByKeywordAndLoginId(
-//	        @RequestParam("keyword") String keyword,
-//	        @RequestParam("loginId") String loginId) {
-//
-//	    List<Diary> diaries;
-//
-//	    if (keyword == null || keyword.trim().isEmpty()) {
-//	        diaries = diariesrepository.findByLoginId(loginId);
-//	    } else {
-//	        diaries = diariesrepository.findByLoginIdAndTagContaining(loginId, keyword);
-//	    }
-//
-//	    return diaries;
-//	}
+
     
     //画像
 //    @GetMapping("/user/image/{id}")
@@ -80,13 +75,37 @@ public class SearchController {
 
     		//タグ検索
     @GetMapping("/search")
-    public List<Diary> searchByTag(@RequestParam(required = false) String tag) {
-        if (tag == null || tag.isBlank()) {
-            return diaryRepository.findAll();
+    public List<Diary> searchByTag(@RequestParam(required = false) String tag,HttpSession session){
+    	
+    	String loginId = (String) session.getAttribute("loginId");
+    	if (tag == null || tag.trim().isEmpty()) {
+        	return diaryRepository.findByUser_LoginIdOrderByResistTime(loginId);
+        	
         }
         return diaryRepository.findBySentenceLike("%" + "#" + tag + "%");
     }
-	//リアクション取得
+
+	@GetMapping("/search/tag/{diaryId}")
+	public List<Tag> diarypageTag(@PathVariable("diaryId") Integer diaryId){
+				
+				//日記データを取得
+				List<Post> postdata=postsrepository.findByDiary_DiaryId(diaryId);
+				
+				List<Tag> tagList=new ArrayList<>();
+				
+				for(Post p:postdata) {
+					tagList.add(p.getTag());
+					System.out.println(p.getTag().getTags());
+					}
+				
+				return tagList;
+			}
+	
+//    @GetMapping("/users")
+//    User userdata=usersrepository.findByLoginId(diarydata.getUser().getLoginId());
+//loginIdとニックネームが欲しい
+
+    
 
 
 		//日記IDを用いて更新する
@@ -104,6 +123,8 @@ public class SearchController {
 			diaryRepository.delete(diary);
 			return "redirect:/search";
 		}
+		
+		
 }
 
 
